Update the binary