@@ -27,7 +27,11 @@
 		<url/>
 	</scm>
 	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<java.version>1.8</java.version>
+		<resource.file.location>.</resource.file.location>
+		<wrapper.location>${project.build.directory}/generated-resources/appassembler/jsw/authorization-server</wrapper.location>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -131,8 +135,181 @@
 	<build>
 		<plugins>
 			<plugin>
-				<groupId>org.springframework.boot</groupId>
-				<artifactId>spring-boot-maven-plugin</artifactId>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.7.0</version>
+				<configuration>
+					<source>${java.version}</source>
+					<target>${java.version}</target>
+				</configuration>
+			</plugin>
+
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-jar-plugin</artifactId>
+				<configuration>
+					<excludes>
+						<exclude>**/*.yml</exclude>
+						<exclude>**/*.txt</exclude>
+					</excludes>
+				</configuration>
+			</plugin>
+
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>appassembler-maven-plugin</artifactId>
+				<version>1.10</version>
+				<executions>
+					<execution>
+						<id>generate-jsw-scripts</id>
+						<phase>package</phase>
+						<goals>
+							<goal>generate-daemons</goal>
+						</goals>
+						<configuration>
+							<repositoryLayout>flat</repositoryLayout>
+							<configurationDirectory>conf</configurationDirectory>
+							<daemons>
+								<daemon>
+									<id>authorization-server</id>
+									<wrapperMainClass>org.tanukisoftware.wrapper.WrapperSimpleApp</wrapperMainClass>
+									<mainClass>com.sripiranavan.authorization_server.AuthorizationServerApplication</mainClass>
+									<commandLineArguments>
+										<commandLineArgument>start</commandLineArgument>
+									</commandLineArguments>
+									<platforms>
+										<platform>jsw</platform>
+									</platforms>
+									<generatorConfigurations>
+										<generatorConfiguration>
+											<generator>jsw</generator>
+											<configuration>
+												<property>
+													<name>wrapper.java.additional.1</name>
+													<value>-XX:MaxDirectMemorySize=256m</value>
+												</property>
+												<property>
+													<name>wrapper.java.additional.2</name>
+													<value>-Xms128m</value>
+												</property>
+												<property>
+													<name>wrapper.java.additional.3</name>
+													<value>-Xmx512m</value>
+												</property>
+												<property>
+													<name>wrapper.java.additional.4</name>
+													<value>-Dreactor.ipc.netty.selectCount=50</value>
+												</property>
+												<property>
+													<name>wrapper.java.additional.5</name>
+													<value>-Dreactor.ipc.netty.workerCount=100</value>
+												</property>
+												<property>
+													<name>wrapper.java.additional.6</name>
+													<value>-Xloggc:logs/gclog     </value>
+												</property>
+												<property>
+													<name>wrapper.java.additional.7</name>
+													<value>-XX:+PrintGC</value>
+												</property>
+												<property>
+													<name>wrapper.java.additional.8</name>
+													<value>-XX:+PrintGCTimeStamps</value>
+												</property>
+												<property>
+													<name>wrapper.java.additional.9</name>
+													<value>-XX:+UseCompressedClassPointers</value>
+												</property>
+												<property>
+													<name>wrapper.java.additional.10</name>
+													<value>-XX:+UseCompressedOops</value>
+												</property>
+												<property>
+													<name>wrapper.java.additional.11</name>
+													<value>-XX:+UseG1GC</value>
+												</property>
+												<property>
+													<name>wrapper.java.additional.12</name>
+													<value>-XX:+UseStringDeduplication</value>
+												</property>
+												<property>
+													<name>wrapper.java.additional.13</name>
+													<value>-XX:+PrintStringDeduplicationStatistics</value>
+												</property>
+												<property>
+													<name>wrapper.java.additional.14</name>
+													<value>-Dio.netty.allocator.useCacheForAllThreads=false</value>
+												</property>
+												<property>
+													<name>configuration.directory.in.classpath.first</name>
+													<value>conf</value>
+												</property>
+												<property>
+													<name>set.default.REPO_DIR</name>
+													<value>lib</value>
+												</property>
+												<property>
+													<name>wrapper.logfile</name>
+													<value>logs/wrapper.log</value>
+												</property>
+											</configuration>
+											<includes>
+												<include>linux-x86-32</include>
+												<include>linux-x86-64</include>
+											</includes>
+										</generatorConfiguration>
+									</generatorConfigurations>
+								</daemon>
+							</daemons>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-antrun-plugin</artifactId>
+				<version>1.6</version>
+				<executions>
+					<execution>
+						<id>make-log-dir</id>
+						<phase>package</phase>
+						<configuration>
+							<tasks>
+								<mkdir dir="${wrapper.location}/logs" />
+
+								<copy todir="${wrapper.location}/conf" overwrite="true">
+									<fileset dir="src/main/resources" />
+								</copy>
+								<copy todir="${wrapper.location}/conf" overwrite="true">
+									<fileset dir="src/main/${resource.file.location}/resources" />
+								</copy>
+
+								<chmod dir="${wrapper.location}/bin" includes="**/*" perm="0755" />
+							</tasks>
+						</configuration>
+						<goals>
+							<goal>run</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<artifactId>maven-assembly-plugin</artifactId>
+				<version>2.5.3</version>
+				<configuration>
+					<descriptor>src/assembly/dep.xml</descriptor>
+					<finalName>authorization-server</finalName>
+				</configuration>
+				<executions>
+					<execution>
+						<id>create-archive</id>
+						<phase>package</phase>
+						<goals>
+							<goal>single</goal>
+						</goals>
+					</execution>
+				</executions>
 			</plugin>
 		</plugins>
 	</build>
